# atomistic_oscillator_strength

./: .gitignore  README.md  environment.yml  pyproject.toml  pyproyect.toml  requirements.txt  setup.py
docs/: development.md  examplesrun.md  installation.md
plot/: anothercolorfading_ridgeplot.ipynb  awk_script.sh  ggplot_pairaa_xas.ipynb  plot_pair_MW_xray.ipynb  plot_pairaa_xas.ipynb  plot_pairaa_xas_v2.ipynb  plot_pairaa_xas_v2_tmp.ipynb  readme.md  rigdeline_plot_xas.ipynb
plot/laura_test/: plot_pairaa_xas_v2.ipynb
plot/single_xas/: plot_pairaa_xas_v2.ipynb
popmatrices/: .gitignore  readme.md  soc_post_analysis.ipynb
popmatrices/Bigscale/: ETDAC_matrix_calculator.ipynb
popmatrices/FY_1-17/: heatmap_ggplot.ipynb  post_analysis_FY_1-17.ipynb
popmatrices/Standard_analysis/: atomcontrib_etransdensity_calculation.ipynb  postanalysis_generalcase.ipynb
popmatrices/newFY_1-26/: post_analysis_FY_1-26.ipynb
qm_etdac_calculator/: __init__.py  cli.py  config.py  etdac_calculator.py  etdac_operations.py  gate_controler.py
src/: etdac_calculator.py  etdac_editprinter.py
tests/: tester.sh
