[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qm_etdac_calculator"
version = "1.0.0"
description = "X-ray Absorption Spectroscopy (XAS) program that calculates excited-state charge transfer as a core-electron transition decomposition analysis"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "GPL-3.0"}
authors = [
    {name = "Carlos A. Ortiz-Mahecha", email = "ortizmahecha@proton.me"},
]
keywords = [
    "quantum-chemistry",
    "xas",
    "x-ray",
    "spectroscopy",
    "excited-state",
    "charge-transfer",
    "molecular-orbitals",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Chemistry",
]

[project.urls]
Homepage = "https://github.com/caraortizmah/atomistic_oscillator_strength"
Repository = "https://github.com/caraortizmah/atomistic_oscillator_strength.git"
Documentation = "https://github.com/caraortizmah/atomistic_oscillator_strength/blob/main/docs"
Issues = "https://github.com/caraortizmah/atomistic_oscillator_strength/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "shellcheck-py>=0.9.0",
    "pandas>=2.0.0",
    "h5py>=3.8",
]
test = [
    "pytest>=7.0",
    "pandas>=2.0",
    "h5py>=3.8",
    "pytest-cov",
]

[tool.setuptools]
packages = ["qm_etdac_calculator"]

[tool.setuptools.package-data]
qm_etdac_calculator = ["py.typed"]

[project.scripts]
qm-etdac = "qm_etdac_calculator.cli:run_qm_etdac_calculator"
qm-etdac-test = "qm_etdac_calculator.cli:run_qm_etdac_test"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v"

[tool.coverage.run]
source = ["qm_etdac_calculator"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
